fix(brain-api): resolve 22 critical issues across security, DB, performance, and functionality
Security:
- Remove hardcoded credentials from config.py (require env vars)
- Restrict CORS origins from wildcard to config-driven list
- Add API key auth middleware (middleware/auth.py)
- Add WebSocket auth validation before accepting connections
- Sanitize error messages in all 7 routers (no internal details leaked)
- Escape ILIKE wildcards in memory.py and pncp.py
- Add non-root user to Dockerfile
- Add max_length validation on Pydantic input models

Database (init-db.sql):
- Move INSERT INTO training_scenarios after CREATE TABLE
- Fix index column: target_agent -> assigned_agent
- Fix partial index status: 'pending' -> 'inbox'

Performance:
- Persistent httpx.AsyncClient with connection pooling in ollama_client.py
- Batch embeddings using asyncio.gather (was sequential)
- Extract shared cosine_similarity to utils/math.py (DRY)

Functional:
- Fix relative import in workflows.py (was breaking module load)
- Add PATCH /api/workflows/{id} endpoint
- Emit WebSocket events during workflow execution
- Fix deprecated datetime.utcnow() -> datetime.now(timezone.utc)
- Fix requirements.txt: aioredis -> redis[hiredis]>=5.0.0
- Remove unused numpy dependency
- Use dynamic api_version in health check
- Add graceful WebSocket shutdown (close_all)

--- a/brain-api/Dockerfile
+++ b/brain-api/Dockerfile
@@ -9,7 +9,11 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+# Create non-root user
+RUN useradd -m -r appuser && chown -R appuser:appuser /app
+USER appuser
+
+COPY --chown=appuser:appuser . .
 
 EXPOSE 8000
 
